feat: added summarry using date range
